21-GKE-Gateway-API/05-GKE-Gateway-API-HTTP-to-HTTPS-Redirect/p2-regional-k8sresources-yaml/04-gateway-http-route.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: route-external-http
spec:
  parentRefs:
  - kind: Gateway
    name: mygateway1-regional
    sectionName: https # this route will be associated to the https listener in the gateway. here you provide the listener name
  rules:
  - backendRefs:
    - name: myapp1-service
      port: 80
      weight: 100
